<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- MODEL -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laptop_model"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etModelEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/laptop_model" />


        <!-- CLIENT -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_name"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etClientEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/client_name" />


        <!-- TYPE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repair_type"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinnerTypeEdit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:entries="@array/repair_types" />


        <!-- COST -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etCostEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/cost"
            android:inputType="numberDecimal" />


        <!-- DATE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etDateEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/date" />


        <!-- STATUS -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinnerStatusEdit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:entries="@array/repair_status" />


        <!-- COMMENT -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etCommentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/comment"
            android:inputType="textMultiLine"
            android:lines="3" />


        <!-- BUTTONS -->

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorError"
            android:text="@string/delete"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>